[package]
name = "pwgrs"
version = "2.0.1"
authors = ["Box <box@sysn.co.uk>"]
edition = "2021"

[[bin]]
name = "pwgrs"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.7"
rand = "0.8"
rand_chacha = "0.3"