[package]
name = "pwgrs"
version = "1.3.1"
authors = ["Box <box@sysn.co.uk>"]
edition = "2021"

[[bin]]
name = "pwgrs"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "4.5.7"
arboard = "3.4.0"
rand_chacha = "0.3"